POst Job issue fixed

--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -87,7 +87,7 @@
             <li class="submenu"> <a [routerLink]="['/employer/dashboard']" class="dropdown-item" href="javascript:;">Dashboard</a></li>
             <li class="submenu"> <a [routerLink]="['/employer/profile']" class="dropdown-item" href="javascript:;">Profile</a></li>
             <li class="submenu"> <a [routerLink]="['/notification']" class="dropdown-item" href="javascript:;">Notification</a></li>
-            <li class="submenu"> <a [routerLink]="['/employer/setting']" class="dropdown-item" href="javascript:;">Setting</a></li>
+            <li class="submenu"> <a [routerLink]="['/employer/setting']" class="dropdown-item" href="javascript:;">Settings</a></li>
             <li class="submenu"> <a (click)="logout()" class="dropdown-item" href="javascript:;">Logout</a></li>
           </ul>
           </li>
@@ -154,7 +154,7 @@
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/dashboard']" href="javascript:;">Dashboard</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/create-candidate']" href="javascript:;">Profile</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/notification']" href="javascript:;">Notification</a></li>
-              <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/profile-setting']" href="javascript:;">Setting</a></li>
+              <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/profile-setting']" href="javascript:;">Settings</a></li>
               <li class="submenu"> <a class="dropdown-item" (click)="logout()" href="javascript:;">Logout</a></li>
             </ul>
           </li>
