--- a/frontend/src/app/modules/features/common/find-jobs/find-jobs.component.html
+++ b/frontend/src/app/modules/features/common/find-jobs/find-jobs.component.html
@@ -26,208 +26,56 @@
               <label>Sort by : </label>
               </div>
               <div class="form-group">
-              <select class="form-control form-control-sm">
-                <option>Date</option>
-                <option>Most Recent </option>
-                <option>Most Popular </option>
-                <option>Ascending (A to Z)  </option>
-                <option>Descending (Z to A)  </option>
+              <select name="sort" [(ngModel)]="queryParams.sort" (change)="onSortBy($event?.target?.value)" class="form-control form-control-sm">
+                <option [value]="undefined">Select</option>
+                <option value="created_at.desc">Most Recent </option>
+                <option value="most_popular.desc">Most Popular </option>
+                <option value="title.asc">Ascending (A to Z)  </option>
+                <option value="title.desc">Descending (Z to A)  </option>
               </select>
               </div>
             </form>
           </div>
         </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="job-post-view.html">
-                      <h5>SAP ABAP Lead Consultant</h5>
-                    </a>
+        <ng-container *ngIf="postedJobs.length > 0; else elseTemplate">
+          <div class="row mt-4 mb-4" *ngFor="let item of postedJobs; let i=index">
+            <div class="col-lg-12">
+              <div class="card job-card">
+                <div class="card-body">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <a href="job-post-view.html">
+                        <h5>{{item?.title}}</h5>
+                      </a>
+                    </div>
+                    <div class="float-right">
+                      <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
+                    </div>
                   </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>Wipro Limited, Austin, TX, USA</h6>
-                    <h6>9+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span>
+                  <div class="media">
+                    <div class="media-body">
+                      <h6>
+                        {{item?.city ? item?.city + ', ' : ''}}
+                        {{item?.state ? item?.state + ', ' : ''}}
+                        {{item?.country ? item?.country : ''}}
+                      </h6>
+                      <h6>{{item?.experience ? item?.experience + ' Years Exp.' : ''}} <span *ngIf="item?.type">{{' , '}}</span>{{item?.type ? sharedService.onGetJobType(item?.type) : ''}} <span *ngIf="item?.remote" class="remote pl-2">Remote</span></h6>
+                      <div class="mt-2">
+                        <ng-container *ngFor="let domain of sharedService.onFindDomainFromID(item?.domain, 'obj')">
+                          <span *ngIf="domain" class="sap-badge">{{domain | json}}</span>
+                        </ng-container>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="#">
-                      <h5>SAP BA / Project Manager</h5>
-                    </a>
-                  </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>SAP Cincinnati, OH, USA</h6>
-                    <h6>7+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="#">
-                      <h5>SAP IBP - Integrated Business Planning</h5>
-                    </a>
-                  </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>Techcom Solutions India Private Limited</h6>
-                    <h6>6+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP IBP</span> <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP PM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="#">
-                      <h5>SAP Security Consultant</h5>
-                    </a>
-                  </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>Infosys Technologies Ltd, United States</h6>
-                    <h6>10+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP Mobility</span><span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="#">
-                      <h5>SAP Hybris Consultant - C4C</h5>
-                    </a>
-                  </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>Next Ventures Chennai, Tamil Nadu</h6>
-                    <h6>8+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP C4C</span> <span class="sap-badge">SAP Mobility</span><span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="#">
-                      <h5>SAP Sr. Consultant-ERP</h5>
-                    </a>
-                  </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>Randstad India Chennai, Tamil Nadu</h6>
-                    <h6>5+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ERP</span> <span class="sap-badge">SAP Mobility</span><span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="clearfix">
-                  <div class="float-left">
-                    <a href="#">
-                      <h5>SAP SD consultant</h5>
-                    </a>
-                  </div>
-                  <div class="float-right">
-                    <button type="submit" class="btn btn-outline-green btn-sm" data-toggle="modal" data-target="#applyJob"> <i class="fas fa-check"></i> Apply Now</button>
-                  </div>
-                </div>
-                <div class="media">
-                  <div class="media-body">
-                    <h6>Cherrytec Intelisolve Ltd, Chennai, Tamil Nadu</h6>
-                    <h6>9+ Years Exp., Permanent, Contract, Part Time, <span class="remote pl-2">Remote</span></h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP SD</span> <span class="sap-badge">SAP Mobility</span><span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        </ng-container>
+        <ng-template #elseTemplate>
+          <p>No Jobs Found</p>
+        </ng-template>
+
 
       </div>
 
@@ -243,40 +91,10 @@
             </div>
             <div class="card-body collapse multi-collapse show" id="collapseExperience">
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+                <li class="list-group-item" *ngFor="let item of experienceFilter; let i=index">
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                    <label class="custom-control-label" for="customCheck1">Freshers </label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck2">
-                    <label class="custom-control-label" for="customCheck2">1 - 3 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck3">
-                    <label class="custom-control-label" for="customCheck3">3 - 5 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck4">
-                    <label class="custom-control-label" for="customCheck4">5 - 7 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck5">
-                    <label class="custom-control-label" for="customCheck5">7 - 10 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck6">
-                    <label class="custom-control-label" for="customCheck6">10 Years &amp; above</label>
+                    <input type="checkbox" class="custom-control-input" id="experienceCheck_{{i}}">
+                    <label class="custom-control-label" for="experienceCheck_{{i}}">{{item?.text}} </label>
                   </div>
                 </li>
               </ul>
