--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -121,10 +121,12 @@
             <li class="list-group-item text-capitalize" *ngIf="postedJobsDetails?.type == '6'">{{postedJobsDetails?.contract_duration}} months</li>
             <li class="list-group-item text-capitalize">
               <ng-container *ngIf="postedJobsDetails?.salary_type == 0">
-                {{sharedService.onGetCurrency(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/hr'}}
+                {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol}}
+                {{postedJobsDetails?.salary + '/hr'}}
               </ng-container>
               <ng-container *ngIf="postedJobsDetails?.salary_type ==1">
-                {{sharedService.onGetCurrency(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + ' Annual pay'}}
+                {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol}}
+                {{postedJobsDetails?.salary + ' Annual pay'}}
               </ng-container>
               <ng-container  *ngIf="postedJobsDetails?.salary_type < 0">
                 --
