--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -11,6 +11,7 @@
         <div class="col-lg-5 col-md-8">
           <ngx-select
           class="text-capitalize"
+          (select)="onSelectSkillEvent($event, i)"
           [placeholder]="'Select Skills'"
           [items]="skillItems"
           formControlName="skill_id"
