--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -28,304 +28,74 @@
               <label>Sort by : </label>
               </div>
               <div class="form-group">
-              <select class="form-control form-control-sm">
-                <option>Date</option>
-                <option>Most Recent </option>
-                <option>Most Popular </option>
-                <option>Ascending (A to Z)  </option>
-                <option>Descending (Z to A)  </option>
-              </select>
+                <select name="sort" [(ngModel)]="queryParams.sort" (change)="onFilterByValues('sort', $event?.target?.value)" class="form-control form-control-sm">
+                  <option [value]="undefined">Select</option>
+                  <option value="created_at.desc">Most Recent </option>
+                  <option value="most_popular.desc">Most Popular </option>
+                  <option value="title.asc">Ascending (A to Z)  </option>
+                  <option value="title.desc">Descending (Z to A)  </option>
+                </select>
               </div>
             </form>
           </div>
         </div>
 
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="candidate-view-profile.html">
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
+        <ng-container *ngIf="userList?.length; else elseTemplate">
+          <div class="row mt-4 mb-4" *ngFor="let item of userList; let i=index">
+            <div class="col-lg-12">
+              <div class="card job-card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-lg-7">
+                      <a href="candidate-view-profile.html">
+                        <h5 class="text-capitalize">
+                          {{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}
+                          <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
+                        </h5>
+                      </a>
+                    </div>
+                    <div class="col-lg-5 text-right">
+                      <span data-toggle="modal" data-target="#exampleModal">
+                        <a class="btn btn-outline-blue btn-sm mr-1" href="#">
+                        <i class="fas fa-file-alt"></i> Resume</a>
+                      </span>
+                      <span data-toggle="modal" data-target="#hireNow">
+                        <a class="btn btn-outline-orange btn-sm" href="#">
+                        <i class="fas fa-paper-plane"></i> Mail</a>
+                      </span>
+                    </div>
                   </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
+                  <div class="media">
+                    <img src="assets/images/user-img.jpg">
+                    <div class="media-body">
+                      <h6 class="text-capitalize">
+                        {{item?.city ? item?.city + ', ' : ''}}
+                        {{item?.state ? item?.state + ', ' : ''}}
+                        {{item?.country ? item?.country : ''}}
+                      </h6>
+                      <h6>{{item?.experience ? 'Total Years Exp: ' + item?.experience : ''}}
+                        <span *ngIf="item?.sap_experience">, {{item?.sap_experience ? 'SAP Exp: ' + item?.sap_experience : ''}}</span>
+                      </h6>
+                      <h6 *ngIf="item?.job_type">{{item?.job_type ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
+                      <h6 *ngIf="item?.availability">
+                       Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
+                      </h6>
+                      <div class="mt-2">
+                        <ng-container *ngFor="let itemSub of item?.hands_on_experience">
+                          <span *ngIf="itemSub.skill_id" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub.skill_id).tag)}}</span>
+                        </ng-container>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>8 Yrs Experience, H1B</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+        <ng-template #elseTemplate>
+          <p>No candidates available</p>
+        </ng-template>
 
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP FSCM</span>  <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="#">
-                      <h5>Balasubramanian <small> - Jr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img2.jpg">
-                  <div class="media-body">
-                    <h6>6+ Yrs Experience , L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="#">
-                      <h5>Sindhu Gangadharan <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img3.jpg">
-                  <div class="media-body">
-                    <h6>8+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="#">
-                      <h5>James Robert <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img4.jpg">
-                  <div class="media-body">
-                    <h6>7+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span>  <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="#">
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>8 Yrs Experience, H1B</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP FSCM</span>  <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>Balasubramanian <small> - Jr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img2.jpg">
-                  <div class="media-body">
-                    <h6>6+ Yrs Experience , L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="#">
-                      <h5>Sindhu Gangadharan <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img3.jpg">
-                  <div class="media-body">
-                    <h6>8+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="#">
-                      <h5>James Robert <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a class="btn btn-outline-blue btn-sm mr-1" href="#">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a class="btn btn-outline-orange btn-sm" href="#">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img4.jpg">
-                  <div class="media-body">
-                    <h6>7+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span>  <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       <!--Side Bar Section-->
       <div class="col-lg-4 col-md-5">
