--- a/frontend/src/app/modules/features/common/home/home.component.html
+++ b/frontend/src/app/modules/features/common/home/home.component.html
@@ -1,34 +1,51 @@
- <!-- Banner Section -->
- <section class="theme-banner">
+<!-- Banner Section -->
+<section class="theme-banner">
   <div class="container">
     <div class="find-banner w-60">
-      <h1 class="banner-title text-center">{{ 'home.title' | translate}}.</h1>
-      <form method="post" class="find-bar">
+
+        <h1 class="banner-title text-center">{{ 'home.title' | translate}}.</h1>
+        <form class="find-bar" method="post" (ngSubmit)="onRedirect()" #searchNgForm="ngForm" [formGroup]="searchForm">
+        <span *ngIf="searchForm?.errors?.atLeastOne && searchNgForm?.submitted" class="d-flex justify-content-center pb-2 text-danger">At least one field
+          has to be provided.</span>
         <div class="row">
+ <div class="col-lg-6 col-md-6 mb-3">
+            <div class="input-with-icon">
+              <input formControlName="title" #searchJob type="text" class="form-control"
+                placeholder="Job Title / SAP Module" value="">
+              <i class="fas fa-briefcase"></i>
+            </div>
+          </div>
           <div class="col-lg-6 col-md-6 mb-3">
-          <div class="input-with-icon">
-            <input type="text" class="form-control" placeholder="Job Title / SAP Module" value="">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          </div>
-          <div class="col-lg-6 col-md-6 mb-3">
-          <div class="input-with-icon">
-            <input type="text" class="form-control" placeholder="City, State, Zipcode" value="">
-            <i class="fas fa-map-marker-alt"></i>
-          </div>
+            <div class="input-with-icon">
+              <input formControlName="location" [options]="{
+              types: ['(regions)']
+              }" ngx-google-places-autocomplete (onAddressChange)="handleAddressChange($event)" type="text"
+                class="form-control" placeholder="City, State" value="">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
           </div>
           <div class="col-lg-6 col-md-6">
-          <div class="custom-control custom-radio ml-1">
-            <input [(ngModel)]="isFindSearch" [value]="0" type="radio" id="customRadio1" name="customRadio" checked class="custom-control-input">
-            <label class="custom-control-label" for="customRadio1">{{ "home.findJobs" | translate}}</label>
-          </div>
-          <div class="custom-control custom-radio ml-1">
-            <input [(ngModel)]="isFindSearch" [value]="1" type="radio" id="customRadio2"  name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio2">{{ "home.findCandidates" | translate}}</label>
-          </div>
+            <div
+              *ngIf="(!loggedUserInfo?.isLoggedIn || (loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(0)))"
+              class="custom-control custom-radio ml-1">
+              <input [(ngModel)]="isFindSearch" [ngModelOptions]="{standalone: true}" [value]="0" type="radio"
+                id="customRadio1" name="customRadio"
+                attr.checked="{{loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(0) ? true : false}}"
+                class="custom-control-input">
+              <label class="custom-control-label" for="customRadio1">{{ "home.findJobs" | translate}}</label>
+            </div>
+            <div
+              *ngIf="(!loggedUserInfo?.isLoggedIn || (loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1)))"
+              class="custom-control custom-radio ml-1">
+              <input [(ngModel)]="isFindSearch" [ngModelOptions]="{standalone: true}" [value]="1" type="radio"
+                id="customRadio2" name="customRadio"
+                attr.checked="{{loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) ? true : false}}"
+                class="custom-control-input">
+              <label class="custom-control-label" for="customRadio2">{{ "home.findCandidates" | translate}}</label>
+            </div>
           </div>
           <div class="col-lg-6 col-md-6">
-          <button (click)="onRedirect()" type="button" class="btn btn-block btn-theme-blue btn-lg">{{"home.search" | translate}}</button>
+            <button type="submit" class="btn btn-block btn-theme-blue btn-lg">{{"home.search" | translate}}</button>
           </div>
         </div>
       </form>
@@ -36,7 +53,7 @@
         <div class="col-md-12 text-center">
           <h5 class="font-weight-bold ">
             <a class="text-dark" href="#">USA <span class="mx-2">|</span></a>
-            <a class="text-dark" href="#">Europe  <span class="mx-2">|</span></a>
+            <a class="text-dark" href="#">Europe <span class="mx-2">|</span></a>
             <a class="text-dark" href="#">Asia Pacific <span class="mx-2">|</span></a>
             <a class="text-dark" href="#">South America </a>
           </h5>
@@ -44,15 +61,25 @@
       </div>
       <div class="row mt-4">
         <div class="col-lg-12 text-center">
-          <a [routerLink]="['/employer/post-job']" class="btn btn-outline-blue font-weight-bold py-2 px-4 mr-1" href="javascript:;">{{"home.postJob" | translate}}   </a>
-          <a [routerLink]="['/user/create-candidate']" class="btn btn-outline-green font-weight-bold py-2 px-4" href="javascript:;">{{"home.postResume" | translate}} </a>
+          <a *ngIf="!loggedUserInfo?.isLoggedIn" [routerLink]="['/employer/post-job']"
+            class="btn btn-outline-blue font-weight-bold py-2 px-4 mr-1" href="javascript:;">{{"home.postJob" |
+            translate}} </a>
+          <a *ngIf="!loggedUserInfo?.isLoggedIn" [routerLink]="['/user/create-candidate']"
+            class="btn btn-outline-green font-weight-bold py-2 px-4" href="javascript:;">{{"home.postResume" |
+            translate}} </a>
+          <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(0)"
+            [routerLink]="['/employer/post-job']" class="btn btn-outline-blue font-weight-bold py-2 px-4 mr-1"
+            href="javascript:;">{{"dashboard.matches" | translate}} </a>
+          <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1)"
+            [routerLink]="['/user/create-candidate']" class="btn btn-outline-green font-weight-bold py-2 px-4"
+            href="javascript:;">{{"dashboard.matches" | translate}} </a>
         </div>
       </div>
     </div>
   </div>
 </section>
-  <!-- //Banner Section -->
-  <!-- Category Section -->
+<!-- //Banner Section -->
+<!-- Category Section -->
 <section class="job-category">
   <div class="container">
     <div class="row">
@@ -64,23 +91,23 @@
     <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-6">
         <a href="#" class="job-category-box">
-        <!-- <i class="flaticon-accounting"></i> -->
-        <h5>India <br>(60)</h5>
+          <!-- <i class="flaticon-accounting"></i> -->
+          <h5>India <br>(60)</h5>
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <a href="#" class="job-category-box">
-        <!-- <i class="flaticon-accounting"></i> -->
-        <h5>USA <br>(40)</h5>
+          <!-- <i class="flaticon-accounting"></i> -->
+          <h5>USA <br>(40)</h5>
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <a href="#" class="job-category-box">
-        <!-- <i class="flaticon-accounting"></i> -->
-        <h5>Canada <br>(20)</h5>
+          <!-- <i class="flaticon-accounting"></i> -->
+          <h5>Canada <br>(20)</h5>
         </a>
       </div>
     </div>
   </div>
-  </section>
-  <!-- //Category Section -->
+</section>
+<!-- //Category Section -->
