--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -33,12 +33,12 @@
             <tbody>
             <ng-container *ngIf="postedJobs?.length > 0; else elseTemplate">
               <tr *ngFor="let item of postedJobs; let i=index">
-                <td><a href="javascript:;" [routerLink]="['/employer/job-detail-view', item?.id]" routerLinkActive="router-link-active" >
+                <td><a class="text-capitalize" href="javascript:;" [routerLink]="['/employer/job-detail-view', item?.id]" routerLinkActive="router-link-active" >
                 {{item?.title}}</a></td>
                 <!-- <td>
                   {{item?.company?.company ? item?.company?.company : '-'}}
                 </td> -->
-                <td>
+                <td class="text-capitalize">
                   {{item?.city ? item?.city + ', ' : ''}}
                   {{item?.state ? item?.state + ', ' : ''}}
                   <!-- {{item?.zipcode ? item?.zipcode + ', ' : ''}} -->
