--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -76,8 +76,8 @@
           <input numbersOnly formControlName="experience" type="text" class="form-control" placeholder="Exp">
           <div class="input-group-append ">
             <select formControlName="exp_type" class="input-group-text" id="basic-addon2">
-              <option value="year">Yrs</option>
-              <option value="month">Mon</option>
+              <option value="years">Yrs</option>
+              <option value="months">Mon</option>
             </select>
           </div>
           <app-control-messages [control]="ticket['controls']['experience']"></app-control-messages>
