--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -20,7 +20,7 @@
       <div class="col-lg-8 col-md-7">
         <div class="row">
           <div class="col-lg-7 title mb-0">
-            <h2>Find Results</h2>
+            <h2><span>Search results for "{{(skillString && skillString?.tag  && this.skills.includes(customParseInt(skillString?.id))) ? utilsHelperService.onSplitTag(skillString?.tag) : ''}}{{(skillString && cityString) ? ', ' : ''}}{{cityString ? cityString : ''}}"</span></h2>
           </div>
           <div class="col-lg-5">
             <form class="form-inline float-right">
@@ -28,12 +28,12 @@
               <label>Sort by : </label>
               </div>
               <div class="form-group">
-                <select name="sort" [(ngModel)]="queryParams.sort" (change)="onFilterByValues('sort', $event?.target?.value)" class="form-control form-control-sm">
-                  <option [value]="undefined">Select</option>
+                <select name="sort" [(ngModel)]="queryParams.sort" (change)="onSortByValues('sort', $event?.target?.value)" class="form-control form-control-sm">
+                  <option [value]="''">Select</option>
                   <option value="created_at.desc">Most Recent </option>
                   <option value="most_popular.desc">Most Popular </option>
-                  <option value="title.asc">Ascending (A to Z)  </option>
-                  <option value="title.desc">Descending (Z to A)  </option>
+                  <option value="first_name.asc">Ascending (A to Z)  </option>
+                  <option value="first_name.desc">Descending (Z to A)  </option>
                 </select>
               </div>
             </form>
@@ -47,7 +47,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-lg-7">
-                      <a href="candidate-view-profile.html">
+                      <a href="javascript:;">
                         <h5 class="text-capitalize">
                           <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
@@ -56,17 +56,18 @@
                     </div>
                     <div class="col-lg-5 text-right">
                       <span data-toggle="modal" data-target="#exampleModal">
-                        <a class="btn btn-outline-blue btn-sm mr-1" href="#">
+                        <a class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
                         <i class="fas fa-file-alt"></i> Resume</a>
                       </span>
                       <span data-toggle="modal" data-target="#hireNow">
-                        <a class="btn btn-outline-orange btn-sm" href="#">
+                        <a class="btn btn-outline-orange btn-sm" href="javascript:;">
                         <i class="fas fa-paper-plane"></i> Mail</a>
                       </span>
                     </div>
                   </div>
                   <div class="media">
-                    <img src="assets/images/user-img.jpg">
+                    <img [src]="item?.photo ? (item?.photo) : 'assets/images/user-img-icon.jpg'">
+                    <!-- <img src="assets/images/user-img.jpg"> -->
                     <div class="media-body">
                       <h6 class="text-capitalize">
                         {{item?.city ? item?.city : ''}}
@@ -100,7 +101,7 @@
       <!--Side Bar Section-->
       <div class="col-lg-4 col-md-5">
         <div class="title">
-          <h2>Filter</h2>
+          <h2>Job Filter</h2>
         </div>
         <div class="sidebar-widget text-left">
         <div class=" my-scrollbar">
@@ -110,40 +111,10 @@
             </div>
             <div class="card-body collapse multi-collapse show" id="collapseExperience">
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+                <li class="list-group-item" *ngFor="let item of experienceFilter; let i=index">
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                    <label class="custom-control-label" for="customCheck1">Freshers </label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck2">
-                    <label class="custom-control-label" for="customCheck2">1 - 3 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck3">
-                    <label class="custom-control-label" for="customCheck3">3 - 5 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck4">
-                    <label class="custom-control-label" for="customCheck4">5 - 7 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck5">
-                    <label class="custom-control-label" for="customCheck5">7 - 10 Years</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck6">
-                    <label class="custom-control-label" for="customCheck6">10 Years &amp; above</label>
+                    <input type="checkbox" [checked]="onCheckExpDefault(item)" (change)="onFiltertByExperience(item)" class="custom-control-input" id="experienceCheck_{{i}}">
+                    <label class="custom-control-label" for="experienceCheck_{{i}}">{{item?.text}} </label>
                   </div>
                 </li>
               </ul>
@@ -153,126 +124,34 @@
             <div class="card-header" data-toggle="collapse" data-target="#collapseJoptype" aria-expanded="false" aria-controls="collapseJoptype">
               Job Type  <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
-            <div class="card-body collapse multi-collapse" id="collapseJoptype">
+            <div [ngClass]="{'show': queryParams?.job_types}" class="card-body collapse multi-collapse" id="collapseJoptype">
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+                <li class="list-group-item" *ngFor="let item of sharedService.onGetJobType(); let i=index">
                   <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck7">
-                    <label class="custom-control-label" for="customCheck7">Remote </label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck8">
-                    <label class="custom-control-label" for="customCheck8">Onsite</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck9">
-                    <label class="custom-control-label" for="customCheck9">Full Time</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck10">
-                    <label class="custom-control-label" for="customCheck10">Part Time</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck11">
-                    <label class="custom-control-label" for="customCheck11">Contract</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck12">
-                    <label class="custom-control-label" for="customCheck12">Temporary</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck13">
-                    <label class="custom-control-label" for="customCheck13">Permanent</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck14">
-                    <label class="custom-control-label" for="customCheck14">Freelancer</label>
-                  </div>
-                </li>
-                <li class="list-group-item">
-                  <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck15">
-                    <label class="custom-control-label" for="customCheck15">Internship</label>
+                    <input [value]="i" [checked]="queryParams?.job_types?.includes(i)" (change)="onFiltertByJobType('job_types', i)" type="checkbox" class="custom-control-input" id="customCheck_{{i}}">
+                    <label class="custom-control-label" for="customCheck_{{i}}">{{item}} </label>
                   </div>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="card mt-4">
+          <!-- <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
               Salary  <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
-            <div class="card-body p-3 collapse multi-collapse" id="collapseSalary">
-              <div class="salary-slider-range clearfix">
-                <input class="min_salary" type="text">
-                <input class="max_salary" type="text">
-              </div>
-              <div id="salary-slider-range" name="rangeInput"></div>
+            <div [ngClass]="{'show': (queryParams?.min_experience && queryParams?.max_experience)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
+              <ngx-slider (userChangeEnd)="onChangeEve($event)" [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ngx-slider>
             </div>
-          </div>
+          </div> -->
           <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
               SAP Skills  <i class="fas fa-angle-down float-right pt-1"></i>
             </div>
-            <div class="card-body p-3 collapse multi-collapse" id="collapseSkills">
+            <div [ngClass]="{'show': skills?.length}" class="card-body p-3 collapse multi-collapse" id="collapseSkills">
               <div class="skill-select">
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input  mb-0" type="checkbox" id="Check1" name="example1">
-                  <label class="custom-control-label mb-0" for="Check1">SAP-FI </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input  mb-0" type="checkbox" id="Check2" name="example1">
-                  <label class="custom-control-label  mb-0" for="Check2">SAP-FSCM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input  mb-0" type="checkbox" id="Check3" name="example1">
-                  <label class="custom-control-label  mb-0" for="Check3">SAP-CO </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check4" name="example1">
-                  <label class="custom-control-label mb-0" for="Check4">SAP-MM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check5" name="example1">
-                  <label class="custom-control-label mb-0" for="Check5">SAP-SD </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check6" name="example1">
-                  <label class="custom-control-label mb-0" for="Check6">SAP-LE </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check7" name="example1">
-                  <label class="custom-control-label mb-0" for="Check7">SAP-PP</label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check8" name="example1">
-                  <label class="custom-control-label mb-0" for="Check8">SAP-QM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check9" name="example1">
-                  <label class="custom-control-label mb-0" for="Check9">SAP-PM </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check9" name="example1">
-                  <label class="custom-control-label mb-0" for="Check9">SAP-PS </label>
-                </div>
-                <div class="custom-control custom-checkbox mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
-                  <input class="custom-control-input mb-0" type="checkbox" id="Check9" name="example1">
-                  <label class="custom-control-label mb-0" for="Check9">SAP-HR </label>
+                <div class="custom-control custom-checkbox mb-2" *ngFor="let item of skillItems?.items; let i=index">
+                  <input [checked]="skills?.includes(customParseInt(item?.id))" (change)="onFiltertBySkill(item)" class="custom-control-input  mb-0" type="checkbox" id="Check_{{i}}" name="example1">
+                  <label class="custom-control-label  mb-0" for="Check_{{i}}">{{utilsHelperService.onSplitTag(item?.tag)}} </label>
                 </div>
               </div>
             </div>
